[gd_scene load_steps=3 format=3 uid="uid://ryloqukt2276"]

[ext_resource type="Script" uid="uid://bdwcqfh7b77de" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="AudioStream" uid="uid://deyuvmq6vpo5v" path="res://Roomy Hall.wav" id="2_h2yge"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="GameArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TopBar" type="PanelContainer" parent="GameArea"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatsContainer" type="HBoxContainer" parent="GameArea/TopBar"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="EnergyPanel" type="VBoxContainer" parent="GameArea/TopBar/StatsContainer"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="GameArea/TopBar/StatsContainer/EnergyPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Spirit Energy"

[node name="EnergyValue" type="Label" parent="GameArea/TopBar/StatsContainer/EnergyPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="MultiplierPanel" type="VBoxContainer" parent="GameArea/TopBar/StatsContainer"]
layout_mode = 2

[node name="MultiplierLabel" type="Label" parent="GameArea/TopBar/StatsContainer/MultiplierPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Multiplier"

[node name="MultiplierValue" type="Label" parent="GameArea/TopBar/StatsContainer/MultiplierPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "x1"

[node name="CenterContainer" type="CenterContainer" parent="GameArea"]
layout_mode = 2
size_flags_vertical = 3

[node name="RitualCircle" type="Control" parent="GameArea/CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="SummonButton" type="Button" parent="GameArea/CenterContainer/RitualCircle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 95.0
offset_right = 75.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "SUMMON"

[node name="ClickFeedback" type="Label" parent="GameArea/CenterContainer/RitualCircle"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "+1"
horizontal_alignment = 1

[node name="RhythmBar" type="Control" parent="GameArea/CenterContainer/RitualCircle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BarBackground" type="ColorRect" parent="GameArea/CenterContainer/RitualCircle/RhythmBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.2, 0.25, 0.8)

[node name="LeftZone" type="ColorRect" parent="GameArea/CenterContainer/RitualCircle/RhythmBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.6, 0.3, 0.5)

[node name="RightZone" type="ColorRect" parent="GameArea/CenterContainer/RitualCircle/RhythmBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
color = Color(0.3, 0.6, 0.3, 0.5)

[node name="MovingBlock" type="ColorRect" parent="GameArea/CenterContainer/RitualCircle/RhythmBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 10.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 2
color = Color(0.9, 0.9, 0.9, 1)

[node name="ClickShadow" type="ColorRect" parent="GameArea/CenterContainer/RitualCircle/RhythmBar"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 10.0
offset_bottom = 15.0
grow_vertical = 2
mouse_filter = 2
color = Color(0.5, 0.5, 0.5, 0.6)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_h2yge")
volume_db = -14.463
pitch_scale = 1.65
mix_target = 1
max_polyphony = 16
